--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html>
 
 <head>
-	<title>GK</title>
+	<title>Gaurav</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="icon" href="./images/favicon.ico">
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -116,7 +117,7 @@
 							</div>
 						</article>
 						<article>
-							<img src="images/Docker.png" class="tech-stack" alt="Docker" />
+							<img src="images/docker.png" class="tech-stack" alt="Docker" />
 							<div class="content">
 								<h3>Docker</h3>
 								<p>Docker is an open source software platform to create, deploy and manage
@@ -130,61 +131,64 @@
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Ipsum sed dolor</h2>
+						<h2>Recent Projects</h2>
 					</header>
 					<div class="posts">
 						<article>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-							<h3>Interdum aenean</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum.
-								Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="http://people.iitr.ernet.in" class="image" target="_blank"><img src="images/code.jpg" alt="" /></a>
+							<h3>Omniport Core </h3>
+							<p>It is my project as part of IMG which seeks to become the ultimate college web app for all
+								the colleges in the country (to be open sourced). The project is powered by Webpack and React.
+							</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="http://people.iitr.ernet.in" class="button" target="_blank">More</a></li>
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-							<h3>Nulla amet dolore</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum.
-								Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="http://people.iitr.ernet.in" class="image" target="_blank"><img src="images/core.jpg" alt="" /></a>
+							<h3>Omniport Core Frontend</h3>
+							<p>The aim of the project is to re-design the current application
+								including the front-end architecture.. The project is powered by React, Redux and Semantic Ui.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="http://people.iitr.ernet.in" class="button" target="_blank">More</a></li>
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-							<h3>Tempus ullamcorper</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum.
-								Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="https://dealtriangle.com" class="image" target="_blank"><img src="images/dealtriangle.jpg" alt="" /></a>
+							<h3>Dealtriangle</h3>
+							<p>The project is meant for lawyers to ease up their process of managing and creating checklists to easeup
+								their workflow. This is my freelance project and is currently in progress. </p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://dealtriangle.com" class="button" target="_blank">More</a></li>
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-							<h3>Sed etiam facilis</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum.
-								Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="http://people.iitr.ernet.in/slambook" class="image" target="_blank"><img src="images/slambook.jpg" alt="" /></a>
+							<h3>Slambook</h3>
+							<p>Slambook is web app similar to paper slambook. The only difference is that our slambook will never
+								be out of space (jk). It was build for the final year grads of our college.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="http://people.iitr.ernet.in/slambook" class="button" target="_blank">More</a></li>
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-							<h3>Feugiat lorem aenean</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum.
-								Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="http://instareload.herokuapp.com" class="image" target="_blank"><img src="images/instagram.jpg" alt="" /></a>
+							<h3>Instareload</h3>
+							<p>An attempt to clone the popular photo sharing socail network instagram.The tech stack include
+								NodeJs, ReactJs, MongoDb and PassportJs
+							</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="http://instareload.herokuapp.com" class="button" target="_blank">More</a></li>
 							</ul>
 						</article>
 						<article>
-							<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-							<h3>Amet varius aliquam</h3>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum.
-								Sed nulla amet lorem feugiat tempus aliquam.</p>
+							<a href="https://no-or.in" class="image" target="_blank"><img src="images/no-or.jpg" alt="" /></a>
+							<h3>No Or</h3>
+							<p>No OR is a team comprising of members of different streams from various prestigious institutes
+								of the country which aims to help the students to build their career by providing them every
+								possible career exploration aid.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://no-or.in" class="button" target="_blank">More</a></li>
 							</ul>
 						</article>
 					</div>
