--- a/setup.html
+++ b/setup.html
@@ -6,6 +6,7 @@
   <title>GK</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
