add webpack blog

--- a/setup.html
+++ b/setup.html
@@ -8,6 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="icon" href="./images/favicon.ico">
   <link rel="stylesheet" href="assets/css/main.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126612552-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-126612552-1');
+  </script>
 </head>
 
 <body class="is-preload">
@@ -130,16 +139,16 @@
           </header>
           <div class="mini-posts">
             <article>
-              <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-              <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+              <a href="blog/webpack.html" class="image"><img src="images/optimized-webpack.png" alt="webpack" /></a>
+              <p>Optimizing Webpack for production</p>
             </article>
             <article>
-              <a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-              <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+              <a href="blog/hackerearth.html" class="image"><img src="images/hackerearth.jpg" alt="hackerearth" /></a>
+              <p>Summer'18 internship at Hackerearth</p>
             </article>
             <article>
-              <a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-              <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+              <a href="blog/js.html" class="image"><img src="images/js.png" alt="js" /></a>
+              <p>Diving deep into JavaScript</p>
             </article>
           </div>
           <ul class="actions">
