--- a/setup.html
+++ b/setup.html
@@ -117,7 +117,7 @@
           </header>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="generic.html">About</a></li>
+            <li><a href="blog/js.html">Blogs</a></li>
             <li><a href="setup.html">My Setup</a></li>
             <!-- <li>
     							<span class="opener">Submenu</span>
