--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 							front end to back end development. I enjoy each aspect, and love building sites & mobile apps from start to
 							the end.
 							<br>
-							<p>
-								solve the problem, write the code -<b><i> Johnson</i></b></p>
+							<blockquote>
+								solve the problem, write the code -<b><i> Johnson</i></b>
+							</blockquote>
 						</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button big">Learn More</a></li>
@@ -218,7 +219,7 @@
 					</header>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">About</a></li>
+						<li><a href="blog/js.html">Blogs</a></li>
 						<li><a href="setup.html">My Setup</a></li>
 						<!-- <li>
 							<span class="opener">Submenu</span>
