--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	</script>
 </head>
 
+
 <body class="is-preload">
 
 	<!-- Wrapper -->
@@ -55,11 +56,10 @@
 							<br /> <br />
 							I'm a developer at <a href="https://img.channeli.in/"> IMG </a> a student's group in <a href="https://www.iitr.ac.in/">
 								IIT Roorkee </a> responsible for development and maintenance of internet and intranet applications in the
-							institute, including the website of IIT Roorkee.
+							institute.
 							<br /> <br />
 							I've always been drawn to the overlap between design and development. My skills are broad from ,
-							front end to back end development. I enjoy each aspect, and love building sites & mobile apps from start to
-							the end.
+							front end to back end development.
 							<br>
 							<blockquote>
 								solve the problem, write the code -<b><i> Johnson</i></b>
@@ -151,7 +151,7 @@
 								the colleges in the country (to be open sourced). The project is powered by Webpack and React.
 							</p>
 							<ul class="actions">
-								<li><a href="http://people.iitr.ernet.in" class="button" target="_blank">More</a></li>
+								<li><a href="http://people.iitr.ernet.in" class="button" target="_blank">View Project</a></li>
 							</ul>
 						</article>
 						<article>
@@ -160,7 +160,7 @@
 							<p>The aim of the project is to re-design the current application
 								including the front-end architecture.. The project is powered by React, Redux and Semantic Ui.</p>
 							<ul class="actions">
-								<li><a href="http://people.iitr.ernet.in" class="button" target="_blank">More</a></li>
+								<li><a href="http://people.iitr.ernet.in" class="button" target="_blank">View Project</a></li>
 							</ul>
 						</article>
 						<article>
@@ -169,7 +169,7 @@
 							<p>The project is meant for lawyers to ease up their process of managing and creating checklists to easeup
 								their workflow. This is my freelance project and is currently in progress. </p>
 							<ul class="actions">
-								<li><a href="https://dealtriangle.com" class="button" target="_blank">More</a></li>
+								<li><a href="https://dealtriangle.com" class="button" target="_blank">View Project</a></li>
 							</ul>
 						</article>
 						<article>
@@ -178,7 +178,7 @@
 							<p>Slambook is web app similar to paper slambook. The only difference is that our slambook will never
 								be out of space (jk). It was build for the final year grads of our college.</p>
 							<ul class="actions">
-								<li><a href="http://people.iitr.ernet.in/slambook" class="button" target="_blank">More</a></li>
+								<li><a href="http://people.iitr.ernet.in/slambook" class="button" target="_blank">View Project</a></li>
 							</ul>
 						</article>
 						<article>
@@ -188,7 +188,7 @@
 								NodeJs, ReactJs, MongoDb and PassportJs
 							</p>
 							<ul class="actions">
-								<li><a href="http://instareload.herokuapp.com" class="button" target="_blank">More</a></li>
+								<li><a href="http://instareload.herokuapp.com" class="button" target="_blank">View Project</a></li>
 							</ul>
 						</article>
 						<article>
@@ -198,7 +198,7 @@
 								of the country which aims to help the students to build their career by providing them every
 								possible career exploration aid.</p>
 							<ul class="actions">
-								<li><a href="https://no-or.in" class="button" target="_blank">More</a></li>
+								<li><a href="https://no-or.in" class="button" target="_blank">View Project</a></li>
 							</ul>
 						</article>
 					</div>
