--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 							</h1>
 							<!-- <p>yarn add music.js</p> -->
 						</header>
-						<p>A pre-final year undergraduate pursuing Enginnering Physics at Indian Institute of
-							Technology Roorkee (IITR).
+						<p>A pre-final year undergraduate pursuing <i>Enginnering Physics</i> at <i>Indian Institute of
+								Technology Roorkee </i>(IITR).
 							<br /> <br />
 							I'm a developer at <a href="https://img.channeli.in/"> IMG </a> a student's group in <a href="https://www.iitr.ac.in/">
 								IIT Roorkee </a> responsible for development and maintenance of internet and intranet applications in the
@@ -65,9 +65,6 @@
 								solve the problem, write the code -<b><i> Johnson</i></b>
 							</blockquote>
 						</p>
-						<!-- <ul class="actions">
-							<li><a href="#" class="button big">Learn More</a></li>
-						</ul> -->
 					</div>
 					<span class="image object">
 						<img src="images/programmer.png" alt="" />
@@ -219,54 +216,13 @@
 					</header>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="blog/js.html">Blogs</a></li>
+						<li><a href="blogs.html">Blogs</a></li>
 						<li><a href="setup.html">My Setup</a></li>
-						<!-- <li>
-							<span class="opener">Submenu</span>
-							<ul>
-								<li><a href="#">Lorem Dolor</a></li>
-								<li><a href="#">Ipsum Adipiscing</a></li>
-								<li><a href="#">Tempus Magna</a></li>
-								<li><a href="#">Feugiat Veroeros</a></li>
-							</ul>
-						</li> -->
 						<li><a href="./assets/resume.pdf">Resume</a></li>
-						<!-- <li><a href="#">Adipiscing</a></li>
-						<li>
-							<span class="opener">Another Submenu</span>
-							<ul>
-								<li><a href="#">Lorem Dolor</a></li>
-								<li><a href="#">Ipsum Adipiscing</a></li>
-								<li><a href="#">Tempus Magna</a></li>
-								<li><a href="#">Feugiat Veroeros</a></li>
-							</ul>
-						</li>
-						<li><a href="#">Maximus Erat</a></li>
-						<li><a href="#">Sapien Mauris</a></li>
-						<li><a href="#">Amet Lacinia</a></li> -->
 					</ul>
 				</nav>
 
-				<!-- Section -->
-				<section>
-					<header class="major">
-						<h2>Recent Blogs</h2>
-					</header>
-					<div class="mini-posts">
-						<article>
-							<a href="blog/webpack.html" class="image"><img src="images/optimized-webpack.png" alt="webpack" /></a>
-							<p>Optimizing Webpack for production</p>
-						</article>
-						<article>
-							<a href="blog/hackerearth.html" class="image"><img src="images/hackerearth.jpg" alt="hackerearth" /></a>
-							<p>Summer'18 internship at Hackerearth</p>
-						</article>
-						<article>
-							<a href="blog/js.html" class="image"><img src="images/js.png" alt="js" /></a>
-							<p>Diving deep into JavaScript</p>
-						</article>
-					</div>
-				</section>
+
 
 				<!-- Section -->
 				<section>
@@ -285,11 +241,6 @@
 						</li>
 					</ul>
 				</section>
-
-				<!-- Footer -->
-				<footer id="footer">
-					<p class="copyright">&copy; gaurav</p>
-				</footer>
 
 
 			</div>
