--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,16 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href=" https://cdn.jsdelivr.net/npm/source-code-pro@2.38.0/source-code-pro.min.css" rel="stylesheet">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KLHEXBKV90"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KLHEXBKV90');
+    </script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
